Fixed overflow and nameing convention

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -10,10 +10,10 @@
   align-items: center;
   flex-direction: column;
   flex-wrap: nowrap;
-  border-right: 1px solid lightgray; /* Rent visuelt, skal nok fjernes */
+  border-right: 1px solid rgb(210, 210, 210); /* Rent visuelt, skal nok fjernes */
   overflow-y: scroll;
   scrollbar-width: thin;
-  scrollbar-color: lightgray white;
+  scrollbar-color: rgb(210, 210, 210) white;
 }
 
 .homepage-group {
@@ -21,7 +21,7 @@
   margin-left: auto;
   width: 95%;
   height: 80px;
-  background-color: lightgray;
+  background-color: rgb(210, 210, 210);
   display: flex;
   overflow: hidden;
   border-radius: 10px;
@@ -71,32 +71,9 @@
   font-size: 14px;
 }
 
-.homepage-groups-showMore {
-  width: 100%;
-  height: 40px;
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.homepage-groups-showMore-anchor {
-  color: black;
-  transition: all .1s;
-}
-
-.homepage-groups-showMore-anchor:hover {
-  color: blue;
-}
-
-#homepage-groups-linkIcon {
-  font-size: 10px;
-  margin-right: 2px;
-}
-
 .homepage-events-container {
-  border-left: 1px solid lightgray; /* Rent visuelt, skal nok fjernes */
-  border-right: 1px solid lightgray; /* Rent visuelt, skal nok fjernes */
+  border-left: 1px solid rgb(210, 210, 210); /* Rent visuelt, skal nok fjernes */
+  border-right: 1px solid rgb(210, 210, 210); /* Rent visuelt, skal nok fjernes */
   height: 100%;
   flex: 1;
   display: block;
@@ -109,7 +86,7 @@
 .homepage-event {
   margin-left: auto;
   margin-right: auto;
-  background-color: lightgray;
+  background-color: rgb(210, 210, 210);
   width: 95%;
   height: 180px;
   display: flex;
@@ -171,45 +148,23 @@
   right: 10%;
 }
 
-.homepage-events-showMore {
-  width: 100%;
-  height: 40px;
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.homepage-events-showMore-anchor {
-  color: black;
-  transition: all .1s;
-}
-
-.homepage-events-showMore-anchor:hover {
-  color: blue;
-}
-
-#homepage-events-linkIcon {
-  font-size: 10px;
-  margin-right: 2px;
-}
-
 .homepage-discover-container {
-  border-left: 1px solid lightgray; /* Rent visuelt, skal nok fjernes */
+  z-index: 1;
+  border-left: 1px solid rgb(210, 210, 210); /* Rent visuelt, skal nok fjernes */
   width: 360px;
   display: block;
   align-items: center;
   flex-direction: column;
-  border-right: 1px solid lightgray;
+  border-right: 1px solid rgb(210, 210, 210);
   overflow-y: scroll;
   scrollbar-width: thin;
-  scrollbar-color: lightgray white;
+  scrollbar-color: rgb(210, 210, 210) white;
 }
 
 .homepage-discover {
   width: 95%;
   height: 80px;
-  background-color: lightgray;
+  background-color: rgb(210, 210, 210);
   display: flex;
   overflow: hidden;
   flex-direction: row;
@@ -247,15 +202,17 @@
 .homepage-discover-info {
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 
-.homepage-discover-title {  
+.homepage-discover-title {
   font-size: 16px;
   font-weight: 600;
   display: flex;
-  text-align: center;
   align-items: center;
   color: black;
+  max-width: 200px;
+  overflow: hidden;
 }
 
 #homepage-discover-icon {
@@ -265,7 +222,27 @@
   right: 30px;
 }
 
-.homepage-discover-showMore {
+
+/* General classes */
+
+.homepage-title {
+  font-weight: 600;
+  font-size: 18px;
+  width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+  color: white;
+  background: linear-gradient(to bottom, rgb(55, 55, 55), rgb(75, 75, 75));
+  padding-top: 8px;
+  padding-bottom: 8px;
+  border-radius: 0 0 6px 6px;
+  position: sticky;
+  top: 0;
+  z-index: 2;
+  text-align: center;
+}
+
+.homepage-showMore {
   width: 100%;
   height: 40px;
   margin-top: 20px;
@@ -274,34 +251,16 @@
   align-items: center;
 }
 
-.homepage-discover-showMore-anchor {
+.homepage-showMore-anchor {
   color: black;
-  transition: all .1s;
+  transition: all 0.1s;
 }
 
-.homepage-discover-showMore-anchor:hover {
+.homepage-showMore-anchor:hover {
   color: blue;
 }
 
-#homepage-discover-linkIcon {
+.homepage-linkIcon {
   font-size: 10px;
   margin-right: 2px;
-}
-
-.homepage-discovers-title,
-.homepage-events-title,
-.homepage-groups-title {
-  font-weight: 600;
-  font-size: 18px;
-  width: 95%;
-  margin-left: auto;
-  margin-right: auto;
-  color: white;
-  background-color: rgb(67, 67, 67);
-  padding: 8px;
-  border-radius: 0 0 6px 6px;
-  position: sticky;
-  top: 0;
-  z-index: 2;
-  text-align: center;
 }
